# portfolio

./: README.md
algorithms/: graph_Stoer_Wagner.ipynb
labs/dataScience/arimaModel/: README.md  arimaModel.Rmd
labs/dataScience/associationRules/: README.md  associationRules.Rmd
labs/dataScience/clusterization/: README.md  clusterization.Rmd
labs/dataScience/desisionTrees/: README.md  desisionTrees.Rmd
labs/dataScience/linearRegression/: README.md  linearRegression.Rmd
labs/dataScience/logisticRegression/: README.md  logisticRegression.Rmd
labs/dataScience/naiveBayes/: README.md  naiveBayes.Rmd
labs/dsa/: README.md
labs/dsa/1/: input.c  input.h  line.c  line.h  main.c  makefile  matr.c  matr.h
labs/dsa/2/: .server.c.swp  input.c  input.h  main.c  makefile  queue.h  queue_list.c  queue_vector.c  server.c  server.h
labs/dsa/3a/: data.txt  dialog.c  dialog.h  dialog_iter.c  iterator.c  iterator.h  main.c  makefile  table.c  table.h  table_privat.h
labs/dsa/3b/: dialog.c  dialog.h  main.c  makefile  table.c  table.h  table_file.h  table_privat.h
labs/dsa/4a/: dialog.c  dialog.h  f.dot  f.txt  main.c  makefile  time.txt  time2.txt  timing.c  timing.h  tree.c  tree.h  tree_privat.h
labs/dsa/4a/timing/: .traversial.csv.swp  delete.csv  insert.csv  maximum.csv  search.csv  traversial.csv
labs/dsa/4b/: dialog.c  dialog.h  f.txt  main.c  makefile  stack.c  stack.h  timing.c  timing.h  tree.c  tree.dot  tree.h  treePrivat.h
labs/dsa/4b/timing/: closest.csv  delete.csv  insert.csv  search.csv  traversial.csv
labs/dsa/5/: .dialog.c.swp  dataStructures.h  dialog.c  dialog.h  graph.c  graph.dot  graph.h  graphPrivat.h  main.c  makefile  queue.c  queue.h  stack.c  stack.h  table.c  table.h
labs/oop/: README.md
labs/oop/circuit/: CMakeLists.txt  dialog.cpp  dialog.h  gate.cpp  gate.h  main.cpp  pin.cpp  pin.h
labs/oop/circuit/tests/: testing.cpp
labs/oop/crossword/: .crossword.cpp.swp  CMakeLists.txt  crossword.cpp  crossword.h  func.cpp  func.h  main.cpp
labs/oop/fileSystem/: CMakeLists.txt  Doxyfile  benchmark.cpp  itValidation.cpp  try.cpp
labs/oop/fileSystem/Controller/: controller.cpp  controller.h  entityDto.h
labs/oop/fileSystem/Entity/: desc.cpp  desc.h  dirDesc.cpp  dirDesc.h  fileDesc.cpp  fileDesc.h  spDesc.cpp  spDesc.h
labs/oop/fileSystem/Service/: fs.cpp  fs.h
labs/oop/fileSystem/Table/: node.cpp  node.h  orderedTable.h  tableIterator.h
labs/oop/fileSystem/View/: commandDto.h  view.cpp  view.h
labs/oop/fileSystem/tests/: testDescs.cpp  testFs.cpp  testTable.cpp
sertificates/: NVIDIA.docx  README.md
